--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,9 @@ body,html{
     margin: 0%;
     font-family:sans-serif;
 }
+* {
+    box-sizing: border-box;
+}
 button{
     border-radius: 25px;
     background-color: rgb(195, 239, 172);
